instructions.Instructions.scala.error
Compilation error:
Instructions:3: error: not found: value brushright
brushright()
^Instructions:5: error: not found: value brushleft
brushleft()
^