instructions.Instructions.scala.code
forward()
brushDown()
brushright()
brushUp()
brushleft()
